--- a/MovieBooking 2/src/main/resources/templates/cinemaRoom/addCinemaRoom.html
+++ b/MovieBooking 2/src/main/resources/templates/cinemaRoom/addCinemaRoom.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -58,6 +58,10 @@
         .bordered-title {
             border-bottom: 2px solid #dee2e6;
             padding-bottom: 10px;
+        }
+
+        .star {
+            color: red;
         }
     </style>
 </head>
@@ -119,82 +123,21 @@
         <!-- Main Content -->
         <div class="col-10 content">
             <div class="container-fluid white-background">
-                <!-- H5 with Bottom Border -->
-                <h5 class="text-center mb-4 bordered-title">Cinema room list</h5>
-                <div class="mb-3">
-                    <!-- Button -->
-                    <div class="d-flex justify-content-start mb-2">
-                        <a class="btn btn-primary" href="#"><i class="fa-solid fa-circle-plus"></i> Add new</a>
+                <h5 class="text-center mb-4 bordered-title">Add New Cinema Room</h5>
+                <form class="">
+                    <div class="mb-3">
+                        <b>Cinema Room Name: <span class="star">*</span></b>
+                        <input type="text" class="form-control" placeholder="Cinema Room Name">
                     </div>
-
-                    <!-- Form -->
-                    <div class="d-flex justify-content-end">
-                        <form class="d-flex align-items-center">
-                            <label for="searchInput" class="me-2">Search:</label>
-                            <input type="text" id="searchInput" class="form-control w-75">
-                        </form>
+                    <div class="mb-3">
+                        <b>Seat Quantity: <span class="star">*</span></b>
+                        <input type="text" class="form-control" placeholder="Seat Quantity">
                     </div>
-                </div>
-
-
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Cinema room ID</th>
-                        <th>Cinema room</th>
-                        <th>Seat quantity</th>
-                        <th>Seat detail</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>Cinema room 1</td>
-                        <td>60</td>
-                        <td><a href="#" class="text-decoration-none"><i class="fa-solid fa-circle-info"></i>
-                            Seat detail</a></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>Cinema room 2</td>
-                        <td>60</td>
-                        <td><a href="#" class="text-decoration-none"><i class="fa-solid fa-circle-info"></i>
-                            Seat detail</a></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>8</td>
-                        <td>Cinema room 3</td>
-                        <td>60</td>
-                        <td><a href="#" class="text-decoration-none"><i class="fa-solid fa-circle-info"></i>
-                            Seat detail</a></td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>9</td>
-                        <td>Cinema room 4</td>
-                        <td>60</td>
-                        <td><a href="#" class="text-decoration-none"><i class="fa-solid fa-circle-info"></i>
-                            Seat detail</a></td>
-                    </tr>
-                    <!-- Add more rows as needed -->
-                    </tbody>
-                </table>
-                <!-- Pagination -->
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-end">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1">Previous</a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
-                        </li>
-                    </ul>
-                </nav>
+                    <div class="mb-3">
+                        <button class="btn btn-primary"><i class="fa fa-check"></i>Add</button>
+                        <button class="btn btn-primary"><i class="fa fa-xmark"></i>Back</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
