--- a/MovieBooking 2/src/main/resources/templates/TKS-showtimes.html
+++ b/MovieBooking 2/src/main/resources/templates/TKS-showtimes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -109,226 +110,104 @@
 
     <!-- Main Container -->
     <div class="container-fluid">
+      <div th:include="component/UserHeader"></div>
       <div class="row">
         <!-- Sidebar and Content Wrapper -->
-        <!-- Header of admin -->
-        <div
-          class="row d-flex align-items-center"
-          style="background-color: #205081; height: 60px"
-        >
-          <div class="col-2">
-            <img
-              src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-FPT.png"
-              alt=""
-              style="height: 40px"
-            />
-          </div>
-          <div class="col-10">
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="d-flex gap-4 align-items-center ms-5"></div>
-              <div class="d-flex gap-4">
-                <a href="#" class="text-white text-decoration-none">
-                  <i class="fa-solid fa-user"></i>
-                  <span>Welcome, tientv5</span>
-                </a>
-                <div class="text-white" style="cursor: pointer">
-                  <i class="fa-solid fa-power-off"></i>
-                  <span>Logout</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Sidebar of Admin -->
-        <div class="col-2 sidebar" style="background-color: white">
-          <!-- Sidebar content here -->
-          <div
-            class="card-holder h-100 text-center"
-            style="background-color: white"
-          >
-            <div class="card-header" style="background-color: white">
-              <img
-                src="https://i.pinimg.com/564x/5b/b1/6e/5bb16e3e270ae5dd89dd9f29064eb12a.jpg"
-                alt=""
-                style="
-                  height: 100px;
-                  width: 100px;
-                  border-radius: 100%;
-                  align-self: center;
-                "
-              />
-              <h5 class="card-title">User name</h5>
-            </div>
-            <div class="card-selection align-items-center">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="">Register Account</a></li>
-                <li class="list-group-item">
-                  <a href="">Account management</a>
-                </li>
-                <li class="list-group-item"><a href="">Booking Ticket</a></li>
-                <li class="list-group-item">
-                  <a href="">Ticket Selling Management</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="">Ticket Booking Management</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="">Employee Management</a>
-                </li>
-                <li class="list-group-item">
-                  <a href="">Cinema Room Management</a>
-                </li>
-                <li class="list-group-item"><a href="">Movie Management</a></li>
-                <li class="list-group-item">
-                  <a href="">Promotion Management</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        <div class="col-12 col-md-3 col-lg-2 h-100" style="background-color: white;" th:include="component/UserSideBar"></div>
 
         <!-- Main Content -->
         <div class="col-10 content">
           <div class="container">
             <!-- H3 with Bottom Border -->
             <h3 class="text-center mb-4 bordered-title">SHOWTIMES</h3>
-            <div
-              class="d-flex justify-content-around align-content-between mb-4"
-            >
-              <button
-                class="btn-dayofweek rounded-circle text-black text-center d-flex align-items-center justify-content-center"
-              >
-                01<br />Fri
-              </button>
-              <button
-                class="btn-dayofweek rounded-circle text-black text-center d-flex align-items-center justify-content-center"
-              >
-                02<br />Sat
-              </button>
-              <button
-                class="btn-dayofweek rounded-circle text-black text-center d-flex align-items-center justify-content-center"
-              >
-                03<br />Mon
-              </button>
-              <button
-                class="btn-dayofweek rounded-circle text-black text-center d-flex align-items-center justify-content-center"
-              >
-                04<br />Tue
-              </button>
-              <button
-                class="btn-dayofweek rounded-circle text-black text-center d-flex align-items-center justify-content-center"
-              >
-                05<br />Wed
-              </button>
-              <button
-                class="btn-dayofweek rounded-circle text-black text-center d-flex align-items-center justify-content-center"
-              >
-                06<br />Thu
-              </button>
-            </div>
+              <!-- Button show DayOfWeek -->
+            <div id="dayButtons" class="d-flex justify-content-around align-content-between mb-4"></div>
 
             <div class="bg-white pb-3">
-              <div class="d-flex justify-content-start border-bottom pt-3 pb-3">
-                <div class="col-2 d-flex justify-content-center p-0">
-                  <img
-                    src="doctor strange.jfif"
-                    class="poster"
-                    alt="Doctor Strange Poster"
-                  />
+
+              
+            </div>
+              <!-- Showlist of movie -->
+            <div id="movieListContainer" class="bg-white pb-3">
+              <!-- Movie listings will be dynamically loaded here -->
+              <!-- movieList.html -->
+                <div th:if="${#lists.isEmpty(movieList)}">
+                  <p>No movies available for the selected date.</p>
                 </div>
-                <div class="col p-0 d-flex flex-column ps-5">
-                  <a
-                    href="#"
-                    class="fs-1 text-decoration-none"
-                    style="color: blue; margin-top: -15px"
-                    >Doctor Strange: Phù Thủy Tối thượng</a
-                  >
-                  <span style="margin: -10px 0 20px 0">Doctor Strange</span>
-                  <div class="row gap-2 ps-2">
-                    <button class="btn btn-light btn-time rounded-4">
-                      08:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      09:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      14:30
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      15:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      17:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      18:30
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      19:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      20:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      21:00
-                    </button>
+                <div th:each="movie : ${movieList}" class="d-flex justify-content-start border-bottom pt-3 pb-3">
+                  <div class="col-2 d-flex justify-content-center p-0">
+                    <img th:src="@{${movie.largeImage}}" class="poster" alt="Movie Poster" />
                   </div>
-                </div>
-              </div>
-              <div class="d-flex justify-content-start border-bottom pt-3 pb-3">
-                <div class="col-2 d-flex justify-content-center p-0">
-                  <img
-                    src="avengerInfinity.jpg"
-                    class="poster"
-                    alt="Doctor Strange Poster"
-                  />
-                </div>
-                <div class="col p-0 d-flex flex-column ps-5">
-                  <a
-                    href="#"
-                    class="fs-1 text-decoration-none"
-                    style="color: blue; margin-top: -15px"
-                    >Avengers: Cuộc Chiến Vô Cực</a
-                  >
-                  <span style="margin: -10px 0 20px 0"
-                    >Avengers Infinity War</span
-                  >
-                  <div class="row gap-2 ps-2">
-                    <button class="btn btn-light btn-time rounded-4">
-                      10:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      11:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      14:30
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      15:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      17:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      19:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      20:00
-                    </button>
-                    <button class="btn btn-light btn-time rounded-4">
-                      21:00
-                    </button>
+                  <div class="col p-0 d-flex flex-column ps-5">
+                    <a href="#" class="fs-1 text-decoration-none" style="color: blue; margin-top: -15px" th:text="${movie.nameEnglish}"></a>
+                    <span th:text="${movie.nameVN}" style="margin: -10px 0 20px 0"></span>
+                    <div class="row gap-2 ps-2">
+                      <button th:each="showtime : ${movie.movieScheduleList}" class="btn btn-light btn-time rounded-4" th:text="${showtime.schedule.scheduleTime}"></button>
+                    </div>
                   </div>
-                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+     $(document).ready(function (){
+       const buttonContainer = $('#dayButtons');
+       const currentDate = new Date();
+       
+       // Ham dinh dang ngay
+       function formatDate(date){
+         const day = ("0" + date.getDate()).slice(-2); // Định dạng ngày (dd)
+         const weekDay = date.toLocaleString('en-US',{weekday:'short'}); // Lấy tên thứ (Mon, Tue...)
+         const formatDayOfWeek = `
+                <div class="fs-5 fw-bold">${day}</div>
+                <div>${weekDay}</div>
+                                `;
+         return formatDayOfWeek;
+       }
+
+       // Hàm định dạng ngày thành 'YYYY-MM-DD'
+      function formatDateValue(date) {
+        const year = date.getFullYear();
+        const month = ("0" + (date.getMonth() + 1)).slice(-2);  // Định dạng tháng (MM)
+        const day = ("0" + date.getDate()).slice(-2);  // Định dạng ngày (dd)
+        return `${year}-${month}-${day}` // CHuoi 'yyyy-MM-DD'
+      }
+
+       // Tao 6 button cho ngay hien tai va 5 ngay tiep theo
+       for (let i = 0; i < 6; i++) {
+         const newDate = new Date();
+         newDate.setDate(currentDate.getDate() + i);
+
+         // Sử dụng chuỗi nội suy để thêm giá trị của `formatDate` vào phần button
+         const anchor = `
+               <a
+                type="button"
+                href="/movies?date=${formatDateValue(newDate)}"
+                class="btn-dayofweek rounded-circle text-black text-center d-flex flex-column align-items-center justify-content-center text-decoration-none text-dark"
+                value = "${formatDateValue(newDate)}"
+                name="date"
+                data-date="${formatDateValue(newDate)}"
+              >
+              ${formatDate(newDate)}
+              </a>`;
+         buttonContainer.append(anchor);  
+       }
+
+       // Bắt sự kiện click cho các thẻ <a>
+      buttonContainer.on('click','.btn-dayofweek', function (event) {
+          // Không cần gọi preventDefault, thẻ <a> sẽ tự động dẫn đến href
+          const selectedDate = $(this).attr('href');  // Lấy giá trị URL
+          console.log('URL ngày được chọn:', selectedDate);  // In ra console
+          window.location.href = selectedDate;  // Chuyển hướng đến URL
+      })
+     })
+    </script>
+  
+  
   </body>
 </html>
