--- a/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
+++ b/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
@@ -3,11 +3,13 @@
         style="background-color: #205081; height: 60px;"
 >
     <div class="col-2">
-        <img
-                src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-FPT.png"
-                alt=""
-                style="height: 40px"
-        />
+        <a th:href="@{/}">
+            <img
+                    src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-FPT.png"
+                    alt=""
+                    style="height: 40px"
+            />
+        </a>
     </div>
     <div class="col-10">
         <div class="d-flex justify-content-between align-items-center">
@@ -37,8 +39,12 @@
                         style="height: 35px;width: 250px;"
 
                 >
-                    <input type="text" class="border-0 w-100" style="outline: none" placeholder="Search"/>
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                   <form th:action="@{/search-in-header}" method="get" class="d-flex align-items-center">
+                       <input type="text" name="searchHeaderInput" th:value="${searchHeaderInput}" class="border-0 w-100" style="outline: none" placeholder="Search"/>
+                       <button type="submit" class="btn ">
+                           <i class="fa-solid fa-magnifying-glass"></i>
+                       </button>
+                   </form>
                 </div>
             </div>
             <div class="d-flex gap-4">
@@ -47,8 +53,10 @@
                     <span>Welcome, tientv5</span>
                 </a>
                 <div class="text-white" style="cursor: pointer;">
-                    <i class="fa-solid fa-power-off"></i>
-                    <span>Logout</span>
+                    <a th:hreff="/login">
+                        <i class="fa-solid fa-power-off"></i>
+                        <span>Logout</span>
+                    </a>
                 </div>
             </div>
         </div>
