--- a/MovieBooking 2/src/main/resources/templates/cinemaRoom/addCinemaRoom.html
+++ b/MovieBooking 2/src/main/resources/templates/cinemaRoom/addCinemaRoom.html
@@ -71,71 +71,31 @@
 <!-- Main Container -->
 <div class="container-fluid">
     <!-- Header of admin -->
-    <div class="row d-flex align-items-center" style="background-color: #205081; height: 60px">
-        <div class="col-2">
-            <img src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-FPT.png" alt=""
-                 style="height: 40px" />
-        </div>
-        <div class="col-10">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex gap-4 align-items-center ms-5">
-                </div>
-                <div class="d-flex gap-4">
-                    <a href="#" class="text-white text-decoration-none">
-                        <i class="fa-solid fa-user"></i>
-                        <span>Welcome, tientv5</span>
-                    </a>
-                    <div class="text-white" style="cursor: pointer">
-                        <i class="fa-solid fa-power-off"></i>
-                        <span>Logout</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div th:insert="~{component/AdminHeader}"></div>
+
     <div class="row">
         <!-- Sidebar of Admin -->
         <div class="col-2 sidebar" style="background-color: white;">
             <!-- Sidebar content here -->
-            <div class="card-holder h-100 text-center" style="background-color: white;">
-                <div class="card-header" style="background-color: white;">
-                    <img src="https://i.pinimg.com/564x/5b/b1/6e/5bb16e3e270ae5dd89dd9f29064eb12a.jpg" alt=""
-                         style="height: 100px; width: 100px; border-radius: 100%; align-self: center;">
-                    <h5 class="card-title">User name</h5>
-                </div>
-                <div class="card-selection align-items-center">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><a href="">Register Account</a></li>
-                        <li class="list-group-item"><a href="">Account management</a></li>
-                        <li class="list-group-item"><a href="">Booking Ticket</a></li>
-                        <li class="list-group-item"><a href="">Ticket Selling Management</a></li>
-                        <li class="list-group-item"><a href="">Ticket Booking Management</a></li>
-                        <li class="list-group-item"><a href="">Employee Management</a></li>
-                        <li class="list-group-item"><a href="">Cinema Room Management</a></li>
-                        <li class="list-group-item"><a href="">Movie Management</a></li>
-                        <li class="list-group-item"><a href="">Promotion Management</a></li>
-                    </ul>
-
-                </div>
-            </div>
+            <div th:insert="~{component/AdminSidebar}"></div>
         </div>
 
         <!-- Main Content -->
         <div class="col-10 content">
             <div class="container-fluid white-background">
                 <h5 class="text-center mb-4 bordered-title">Add New Cinema Room</h5>
-                <form class="">
+                <form method="post" th:action="@{/cinemaRoom/addCinemaRoom}" th:object="${cinemaRoom}">
                     <div class="mb-3">
                         <b>Cinema Room Name: <span class="star">*</span></b>
-                        <input type="text" class="form-control" placeholder="Cinema Room Name">
+                        <input type="text" class="form-control" placeholder="Cinema Room Name" th:field="*{cinemaName}">
                     </div>
                     <div class="mb-3">
                         <b>Seat Quantity: <span class="star">*</span></b>
-                        <input type="text" class="form-control" placeholder="Seat Quantity">
+                        <input type="text" class="form-control" placeholder="Seat Quantity" th:field="*{seatQuantity}">
                     </div>
                     <div class="mb-3">
-                        <button class="btn btn-primary"><i class="fa fa-check"></i>Add</button>
-                        <button class="btn btn-primary"><i class="fa fa-xmark"></i>Back</button>
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i>Add</button>
+                        <a th:href="@{/cinemaRoom/listCinemaRoom}" class="btn btn-primary"><i class="fa fa-xmark"></i>Back</a>
                     </div>
                 </form>
             </div>
