edit account information function

--- a/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
+++ b/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
@@ -54,7 +54,7 @@
                         <span>Welcome, <span sec:authentication="name"></span></span>
                     </a>
                     <div class="text-white" style="cursor: pointer;">
-                        <a th:href="@{/logout}">
+                        <a th:href="@{/logout}" class="text-white text-decoration-none">
                             <i class="fa-solid fa-power-off"></i>
                             <span>Logout</span>
                         </a>
@@ -64,12 +64,10 @@
             <div sec:authorize="!isAuthenticated()">
                 <div class="d-flex gap-4">
                     <a th:href="@{/login}" class="text-white text-decoration-none">
-                        <i class="fa-solid fa-user"></i>
                         <span>Login</span>
                     </a>
-                    <div class="text-white" style="cursor: pointer;">
-                        <a th:href="@{/logout}">
-                            <i class="fa-solid fa-power-off"></i>
+                    <div class="text-white" style="cursor: pointer;" >
+                        <a th:href="@{/register}" class="text-white text-decoration-none">
                             <span>Register</span>
                         </a>
                     </div>
