--- a/MovieBooking 2/src/main/resources/templates/component/CustomerHeader.html
+++ b/MovieBooking 2/src/main/resources/templates/component/CustomerHeader.html
@@ -1,4 +1,4 @@
-<div
+<div th:fragment = "header"
         class="row d-flex align-items-center"
         style="background-color: #205081; height: 60px;"
 >
