--- a/MovieBooking 2/src/main/resources/templates/component/CustomerSideBar.html
+++ b/MovieBooking 2/src/main/resources/templates/component/CustomerSideBar.html
@@ -1,6 +1,7 @@
 
   <!-- Sidebar content here -->
-  <div class="card-holder h-100 text-center" style="background-color: white;">
+  <div th:fragment = "sidebar"
+          class="card-holder h-100 text-center" style="background-color: white;">
     <div class="card-header" style="background-color: white;">
       <img src="https://i.pinimg.com/564x/5b/b1/6e/5bb16e3e270ae5dd89dd9f29064eb12a.jpg" alt=""
            style="height: 100px; width: 100px; border-radius: 100%; align-self: center;">
