modify header and sidebar

--- a/MovieBooking 2/src/main/resources/templates/BookedTicketManagement.html
+++ b/MovieBooking 2/src/main/resources/templates/BookedTicketManagement.html
@@ -68,10 +68,10 @@
 
 <!-- Main Container -->
 <div class="container-fluid">
-  <div th:include="component/CustomerHeader"></div>
+  <div th:include="component/UserHeader"></div>
   <div class="row">
     <!-- Sidebar and Content Wrapper -->
-    <div class="col-12 col-md-3 col-lg-2 h-100" style="background-color: white;" th:include="component/CustomerSideBar"></div>
+    <div class="col-12 col-md-3 col-lg-2 h-100" style="background-color: white;" th:include="component/UserSideBar"></div>
 
     <!-- Main Content -->
     <div class="col-12 col-md-9 col-lg-10   content" style="height: 100vh;">
