--- a/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
+++ b/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
@@ -1,4 +1,4 @@
-<div th:fragment = "header"
+<div
         class="row d-flex align-items-center"
         style="background-color: #205081; height: 60px;"
         xmlns:sec="http://www.w3.org/1999/xhtml">
