--- a/MovieBooking 2/src/main/resources/templates/confirmbookingmember.html
+++ b/MovieBooking 2/src/main/resources/templates/confirmbookingmember.html
@@ -104,13 +104,13 @@
 <!-- Main Container -->
 <div class="container-fluid">
     <!-- Header -->
-    <div th:replace = "component/CustomerHeader::header">...</div>
+    <div th:replace = "component/UserHeader::header">...</div>
 
     <div class="row">
         <!-- Sidebar of Admin -->
         <div class="col-2 sidebar" style="background-color: white;">
             <!-- Sidebar content here -->
-            <div th:replace = "component/CustomerSideBar::sidebar">...</div>
+            <div th:replace = "component/UserSideBar::sidebar">...</div>
 
 
         </div>
