--- a/MovieBooking 2/src/main/resources/templates/login.html
+++ b/MovieBooking 2/src/main/resources/templates/login.html
@@ -92,7 +92,7 @@
 
             <div class="mt-3 d-flex justify-content-center">
               <span>Don't have an account yet?</span>
-              <a href="#" class="text-dark ms-2">Register now!</a>
+              <a th:href="@{/register}" class="text-dark ms-2">Register now!</a>
             </div>
           </div>
         </div>
