--- a/MovieBooking 2/src/main/resources/templates/register.html
+++ b/MovieBooking 2/src/main/resources/templates/register.html
@@ -209,7 +209,7 @@
 
         <div class="mt-3 d-flex justify-content-center">
           <span>Have an account yet?</span>
-          <a href="#" class="text-dark ms-2">Login</a>
+          <a th:href="@{/login}" class="text-dark ms-2">Login</a>
         </div>
       </div>
     </div>
