history score and find movie list

--- a/MovieBooking 2/src/main/resources/templates/component/UserSideBar.html
+++ b/MovieBooking 2/src/main/resources/templates/component/UserSideBar.html
@@ -10,7 +10,7 @@
     <div class="card-selection align-items-center">
       <ul class="list-group list-group-flush">
         <li class="list-group-item w-100" style="text-align: left;">Account information</li>
-        <li class="list-group-item w-100" style="text-align: left;">History</li>
+        <li class="list-group-item w-100" style="text-align: left;"><a th:href="@{/view-history-score}">History Score</a></li>
         <li class="list-group-item w-100" style="font-weight: bold; text-align: left;"><a th:href="@{/booked-ticket}">Booked Ticket</a></li>
         <li class="list-group-item w-100" style="text-align: left;">Canceled ticket</li>
       </ul>
