--- a/MovieBooking 2/src/main/resources/templates/MovieList.html
+++ b/MovieBooking 2/src/main/resources/templates/MovieList.html
@@ -96,7 +96,7 @@
                 <div th:unless="${movies.isEmpty()}" th:each="movie:${movies}" class="movie-card">
                     <img th:if="${movie.smallImage == null}" src="https://via.placeholder.com/150x220.png?text=POSTER+Updating" alt="Poster Updating">
                     <img th:unless="${movie.smallImage == null}" th:src="${movie.smallImage}" th:alt="${movie.nameVN}">
-                    <button class="schedule-btn">View schedule</button>
+                    <a  class="btn schedule-btn" th:href="@{/movies(movieId=${movie.movieId},date=${selectedDate})}">View schedule</a>
                 </div>
             </div>
         </div>
