--- a/MovieBooking 2/src/main/resources/templates/bookinglistadmin.html
+++ b/MovieBooking 2/src/main/resources/templates/bookinglistadmin.html
@@ -120,7 +120,7 @@
 <!-- Main Container -->
 <div class="container-fluid">
     <!-- Header Customer -->
-    <div th:replace = "component/AdminHeader::header">...</div>
+    <div th:insert="~{component/AdminHeader}">...</div>
 
 
 
@@ -128,7 +128,7 @@
         <!-- Sidebar of User -->
         <div class="col-2 sidebar" style="background-color: white;">
             <!-- Sidebar content here -->
-            <div th:replace = "component/AdminSideBar::sidebar">...</div>
+            <div th:insert="~{component/AdminSidebar}">...</div>
         </div>
 
         <!-- Main Content -->
