--- a/MovieBooking 2/src/main/resources/templates/confirmbookingadmin.html
+++ b/MovieBooking 2/src/main/resources/templates/confirmbookingadmin.html
@@ -116,13 +116,13 @@
 <!-- Main Container -->
 <div class="container-fluid">
     <!-- Header -->
-    <div th:replace = "component/AdminHeader::header">...</div>
+    <div th:insert="~{component/AdminHeader}">...</div>
 
     <div class="row">
         <!-- Sidebar of Admin -->
         <div class="col-2 sidebar" style="background-color: white;">
             <!-- Sidebar content here -->
-            <div th:replace = "component/AdminSideBar::sidebar">...</div>
+            <div th:insert="~{component/AdminSidebar}">...</div>
         </div>
 
         <!-- Main Content -->
