--- a/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
+++ b/MovieBooking 2/src/main/resources/templates/component/UserHeader.html
@@ -53,7 +53,7 @@
                     <span>Welcome, tientv5</span>
                 </a>
                 <div class="text-white" style="cursor: pointer;">
-                    <a th:hreff="/login">
+                    <a th:href="@{/MovieList.html}">
                         <i class="fa-solid fa-power-off"></i>
                         <span>Logout</span>
                     </a>
