--- a/MovieBooking 2/src/main/resources/templates/listPromotion.html
+++ b/MovieBooking 2/src/main/resources/templates/listPromotion.html
@@ -143,7 +143,7 @@
 								<label for="searchInput">
 									<button class="me-2" type="submit" style="border: none; background-color: unset;">Search:</button>
 								</label>
-								<input type="text" id="searchInput" class="form-control" name="keyword"
+								<input type="text" id="searchInput" class="form-control" name="keyword" th:value="${keyword}"
 																		maxlength="28" />
 							</form>
 						</div>
